# AbsEvolve

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt
data/custom/: all_benchmarks.csv  example1.c  example2.c
data/sv-benchmarks/nla-digbench/: all_benchmarks.csv  all_benchmarks_subset.csv  bresenham-ll.c  bresenham.c  cohencu-ll.c  cohencu.c  cohendiv-ll.c  cohendiv.c  dijkstra-u.c  dijkstra.c  divbin.c  divbin2.c  egcd-ll.c  egcd.c  egcd2-ll.c  egcd2.c  egcd3-ll.c  egcd3.c  fermat1-ll.c  fermat1.c  fermat2-ll.c  fermat2.c  freire1.c  freire2.c  geo1-ll.c  geo1-ll2.c  geo1-u.c  geo1-u2.c  geo1.c  geo2-ll.c  geo2-ll2.c  geo2.c  geo3-ll.c  geo3-ll2.c  geo3.c  hard-ll.c  hard-u.c  hard.c  hard2.c  knuth.c  (+21 more)
experiments/: benchmark_runner.py  plot.py  results_checker.py  results_parser.py  run_experiments.py  utils.py
experiments/licenses/: gurobi.lic
experiments/yaml/: clam-poly.svcomp19.yaml  clam.svcomp19.yaml
paper_experiments_logs/7.1_linear/nla-digbench/elina-zones/aff-dual-0/: baseline_cmp.json  gurobi_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/elina-zones/aff-dual-1/: baseline_cmp.json  gurobi_cmp.json  prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/elina-zones/aff-dual-2/: baseline_cmp.json  gurobi_cmp.json  prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/elina-zones/aff-dual-3/: baseline_cmp.json  prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/elina-zones/aff-dual-4/: gurobi_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/elina-zones/aff-dual-5/: gurobi_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/elina-zones/aff-gb/: all_checks.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/elina-zones/baseline/: all_checks.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/oct/aff-dual-0/: gurobi_cmp.json  prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/oct/aff-dual-1/: baseline_cmp.json  gurobi_cmp.json  prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/oct/aff-dual-2/: baseline_cmp.json  gurobi_cmp.json  prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/oct/aff-dual-3/: prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/oct/aff-dual-4/: run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/oct/aff-dual-5/: baseline_cmp.json  prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/oct/aff-gb/: run_log.json  run_log.txt
paper_experiments_logs/7.1_linear/nla-digbench/oct/baseline/: run_log.json  run_log.txt
paper_experiments_logs/7.1_linear_subset/nla-digbench/elina-zones/aff-dual-0/: baseline_cmp.json  gurobi_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear_subset/nla-digbench/elina-zones/aff-dual-1/: run_log.json  run_log.txt
paper_experiments_logs/7.1_linear_subset/nla-digbench/elina-zones/aff-dual-2/: prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear_subset/nla-digbench/elina-zones/aff-dual-3/: prev_epoch_cmp.json  run_log.json  run_log.txt
paper_experiments_logs/7.1_linear_subset/nla-digbench/elina-zones/aff-dual-4/: run_log.json  run_log.txt
paper_experiments_logs/7.1_linear_subset/nla-digbench/elina-zones/aff-dual-5/: run_log.json  run_log.txt
scripts/: apply_patches.sh  build.sh  generate_patches.sh  install_deps.sh
src/clam/: .gitignore
src/clam/include/clam/: CfgBuilderParams.hh  CrabDomain.hh
src/clam/lib/Clam/: CMakeLists.txt  CfgBuilder.cc  Clam.cc  ClamOptions.def  RegisterAnalysis.cc
src/clam/py/: clam.py
src/crab/cmake/: FindElina.cmake
src/crab/lib/: abstract_domain_params.cpp
src/crab/tests/backward/: backward-array-1.cc  unittests-backward.cc
src/crab/tests/domains/: flat_bool_domain1.cc  flat_bool_domain5.cc  soct.cc  test1-real.cc
src/crab/tests/inter/: bu_inter.cc  td_inter_1.cc
src/elina/: .gitignore  Makefile  configure
src/elina/elina_oct/: Makefile  opt_oct_precise_ops.cpp  opt_oct_precise_ops.hpp
src/elina/elina_poly/: Makefile  opt_pk_precise_ops.cpp  opt_pk_precise_ops.hpp
src/elina/elina_zones/: Makefile  opt_mat.c  opt_mat.h  opt_zones_precise_ops.cpp  opt_zones_precise_ops.hpp
src/elina/partitions_api/: array_comp_list.c
src/elina/precise_ops_handler/: CMakeLists.txt  Makefile
src/elina/precise_ops_handler/cmake/: FindGurobi.cmake  FindLibtorch.cmake  FindZ3.cmake
src/elina/precise_ops_handler/implementations/constraints_templates/: CMakeLists.txt
src/elina/precise_ops_handler/implementations/constraints_templates/include/: octagon_template.hpp  zones_template.hpp
src/elina/precise_ops_handler/implementations/constraints_templates/src/: octagon_template.cpp  zones_template.cpp
src/elina/precise_ops_handler/implementations/lin_constraints_solvers/: CMakeLists.txt  dual_lin_constraints_solver.cpp  dual_lin_constraints_solver.hpp  gb_lin_constraints_solver.cpp  gb_lin_constraints_solver.hpp  symba_lin_constraints_solver.cpp  symba_lin_constraints_solver.hpp
src/elina/precise_ops_handler/implementations/quad_constraints_solvers/: CMakeLists.txt  dual_quad_constraints_solver.cpp  dual_quad_constraints_solver.hpp  gb_quad_constraints_solver.cpp  gb_quad_constraints_solver.hpp
src/elina/precise_ops_handler/include/: constraints_template.hpp  lin_constraints_solver.hpp  quad_affine_block.hpp  quad_affine_solver.hpp  quad_constraints_solver.hpp  utils.hpp
src/elina/precise_ops_handler/src/: constraints_template.cpp  lin_constraints_solver.cpp  quad_affine_block.cpp  quad_affine_solver.cpp  quad_constraints_solver.cpp  utils.cpp
src/patches/: PATCHES.md  clam.patch  crab.patch  elina.patch
(+11572 files in other folders)
